--- a/.spectrwm.conf
+++ b/.spectrwm.conf
@@ -121,23 +121,23 @@ bind[firefox]		= MOD+XF86HomePage
 #program[mail]		= thunderbird
 #bind[mail]			= MOD+XF86Mail
 
-program[fmangr]		= pcmanfm 
+program[fmangr]		= spacefm 
 bind[fmangr]		= Menu
 
 program[editor]		= emacs
 bind[editor]		= MOD+Control+l
 
 program[art]		= gimp
-bind[art]			= MOD+Control+g
+bind[art]		= MOD+Control+g
 
-#program[ssheet]	= libreoffice --calc
-#bind[ssheet]		= MOD+Control+p
+program[ssheet]		= libreoffice --calc
+bind[ssheet]		= MOD+Control+p
 
-#program[lodoc]		= libreoffice --writer
-#bind[lodoc]		= MOD+Control+o
+program[lodoc]		= libreoffice --writer
+bind[lodoc]		= MOD+Control+o
 
 program[volup]		= amixer -q sset Master 5%+ unmute
-bind[volup]			= XF86AudioRaiseVolume
+bind[volup]		= XF86AudioRaiseVolume
 
 program[voldown]	= amixer -q sset Master 5%- unmute
 bind[voldown]		= XF86AudioLowerVolume
@@ -145,11 +145,11 @@ bind[voldown]		= XF86AudioLowerVolume
 program[volmute]	= amixer sset Master,0 toggle
 bind[volmute]		= XF86AudioMute
 
-program[URxvt]      = urxvt
-bind[URxvt]         = Mod1+F1
+program[URxvt]		= urxvt
+bind[URxvt]		= Mod1+F1
 
 program[Xterm]		= xterm
-bind[Xterm]			= Mod1+F3
+bind[Xterm]		= Mod1+F3
 
 program[Calc]		= xcalc
 bind[Calc]		= XF86Calculator
