--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -21,7 +21,17 @@ rofi.sidebar-mode:     true
 rofi.case-sensitive:   true
 rofi.click-to-exit:    true
 rofi.color-enabled:    true
-rofi.color-window:     #BF1F1A24, #BF494C5F, #BF494C5F
-rofi.color-normal:     argb:BF1F1A24, argb:BFffeefc, argb:BF251F2B, argb:BF478061, argb:BFffeefc
-rofi.color-active:     #BF141021, #BFc05c47, #BF312842, #BFc05c47, #BFffeefc
-rofi.color-urgent:     #BF141021, #BFe4b226, #BF312842, #BFe4b226, #BFffeefc
+
+# green
+#rofi.color-window:     #BF1F1A24, #BF494C5F, #BF494C5F
+#rofi.color-normal:     argb:BF1F1A24, argb:BFffeefc, argb:BF251F2B, argb:BF478061, argb:BFffeefc
+#rofi.color-active:     #BF141021, #BFc05c47, #BF312842, #BFc05c47, #BFffeefc
+#rofi.color-urgent:     #BF141021, #BFe4b226, #BF312842, #BFe4b226, #BFffeefc
+
+# city lights
+rofi.color-window: argb:CC131920, #eceff4, 	   #eceff4
+rofi.color-normal: argb:00131920, #737783, argb:00eceff4, argb:00131920, #f9f9f9
+rofi.color-urgent: argb:00131920, #cc6666, argb:e54b5160, argb:00131920, #f9f9f9
+rofi.color-active: argb:00131920, #65acff, argb:e44b5160, argb:00131920, #f9f9f9
+
+rofi.modi: run,drun,window
