--- a/.config/polybar/master.conf
+++ b/.config/polybar/master.conf
@@ -3,9 +3,9 @@
 ;=====================================================
 
 [colors]
-background = #BF212121
-foreground = #B5B9BF
-awforeground = #E4E4EE
+background = #D9212121
+foreground = #B9B9B9
+border     = #4E4E4E
 urgent     = #B34747
 blue       = #6BA4E7
 pink       = #9181E7
@@ -15,11 +15,10 @@ yellow     = #F9F1AF
 green      = #2F4F4F
 dimyellow  = #9C9B89
 dimgray    = #818182
-border     = #5F5F61
 white      = #F8F8FF
 gray       = #D3D3D3
 wsbackground = #7E889E
-tint2bk      = #BF212121
+tint2bk      = #D9212121
 
 [settings]
 throttle-output        = 5
@@ -59,8 +58,8 @@ border-color = ${colors.border}
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-font-0 = "Office Code Pro:size=11:antialias=false;2"
-font-1 = "MaterialIcons:size=11:antialias=false;1"
+font-0 = "Office Code Pro:size=10:antialias=false;2"
+font-1 = "MaterialIcons:size=10:antialias=false;1"
 font-2 = "icomoon:size=10:antialias=false;2"
 font-3 = "Source Code Pro:size=10:antialias=false;2"
 
@@ -94,7 +93,7 @@ border-bottom-size = 0
 radius             = 0
 bottom             = true
 line-size          = 1
-font-0             = "Code New Roman:size=11:antialias=false;2"
+font-0             = "Office Code Pro:size=11:antialias=false;2"
 
 
 offset-x = 0
@@ -111,9 +110,9 @@ font-3 = "icomoon:size=10:antialias=false;2"
 font-4 = "Ubuntu Nerd Font:size=9:antialias=false;2"
 
 module-margin = 2
-padding-right = 4
+padding-right = 0
 padding-left = 0
-separator = :
+;separator = :
 
 ;click-middle = skippy-xd --activate-window-picker
 ;scroll-up = pamixer -i 2
@@ -122,9 +121,9 @@ separator = :
 ;double-click-middle = skippy-xd --activate-window-picker
 ;double-click-right = pavucontrol &
 
-click-right = rofi -show
-click-left = jgmenu_run
-click-middle = connman-gtk
+;click-right = rofi -show
+;click-left = jgmenu_run
+;click-middle = connman-gtk
 
 ;=====================================================
 ;    Openbox Bar
@@ -181,7 +180,7 @@ width              = 100%
 height             = 24
 border-size        = 0
 border-top-size    = 0
-border-bottom-size = 0
+border-bottom-size = 1
 radius             = 0
 bottom             = false
 line-size          = 2
@@ -199,10 +198,11 @@ border-color = ${colors.border}
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-font-0 = "Roboto Mono:size=11:antialias=false;2"
-font-1 = "MaterialIcons:size=11:antialias=false;4"
-font-2 = "icomoon:size=10:antialias=false;2"
-font-3 = "Source Code Pro:size=10:antialias=false;2"
+font-0 = "Roboto Mono:size=10:antialias=false;2"
+font-1 = "Source Code Pro:size=10:antialias=false;2"
+font-2 = "Source Sans Pro:size=10:antialias=false;2"
+font-3 = "MaterialIcons:size=10:antialias=false;4"
+font-4 = "icomoon:size=10:antialias=false;2"
 
 module-margin = 2
 padding-right = 1
@@ -217,6 +217,51 @@ padding-left = 0
 ;double-click-right = pavucontrol &
 
 ; click-left = rofi -show
+click-right = jgmenu_run
+click-middle = pkill -USR1 -x polybar
+
+;=====================================================
+;    bspwm Bar
+;=====================================================
+
+[bar/bspwmbar]
+width              = 100%
+height             = 24
+border-size        = 0
+border-top-size    = 0
+border-bottom-size = 1
+radius             = 0
+bottom             = false
+line-size          = 2
+
+offset-x = 0
+offset-y = 0
+fixed-center = true
+
+; override-redirect = true
+; wm-restack = i3
+
+wm-name = FBpolybar
+
+border-color = ${colors.border}
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+font-0 = "Roboto Mono:size=10:antialias=false;2"
+font-1 = "Source Code Pro:size=10:antialias=false;2"
+font-2 = "Source Sans Pro:size=10:antialias=false;2"
+font-3 = "MaterialIcons:size=10:antialias=false;4"
+font-4 = "icomoon:size=10:antialias=false;2"
+
+module-margin = 2
+padding-right = 1
+padding-left = 0
+;separator = :
+
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
+;scroll-up = bspc desktop -f prev.local
+;scroll-down = bspc desktop -f next.local
 click-right = jgmenu_run
 click-middle = pkill -USR1 -x polybar
 
