--- a/.config/polybar/modules.conf
+++ b/.config/polybar/modules.conf
@@ -39,43 +39,6 @@ label-empty-background = ${colors.background}
 label-empty-foreground = ${colors.foreground}
 label-empty-underline = ${colors.background}
 
-;;;;;;;;;;;;;;;;;;;;;;;;
-;; Awesome Workspaces ;;
-;;;;;;;;;;;;;;;;;;;;;;;;
-[module/awesome-ws]
-type = internal/xworkspaces
-pin-workspaces = false
-enable-click = true
-enable-scroll = true
-format-padding = 0
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-5 = 6;
-icon-6 = 7;
-icon-7 = 8;
-icon-8 = 9;
-icon-9 = 10;
-icon-default =
-format = <label-state>
-label-active = " %name% "
-label-active-foreground = ${colors.awforeground}
-label-active-background = ${colors.background}
-label-active-underline = ${colors.wsbackground}
-label-occupied = " %name% "
-lable-occupied-background = ${colors.background}
-label-occupied-foreground = ${colors.foreground}
-label-occupied-underline = ${colors.wsbackground}
-label-urgent = " %name% "
-label-urgent-foreground = ${colors.urgent}
-label-urgent-underline = ${colors.urgent}
-label-empty = " %name% "
-label-empty-background = ${colors.background}
-label-empty-foreground = ${colors.foreground}
-label-empty-underline = ${colors.background}
-
 ;;;;;;;;;;;;;;;;;;;
 ;; i3 Workspaces ;;
 ;;;;;;;;;;;;;;;;;;;
@@ -120,59 +83,131 @@ label-urgent-foreground = ${colors.white}
 label-urgent-underline = ${colors.urgent}
 label-urgent-padding = 1
 
-;;;;;;;;;;;;;;;;;;;;
-;;Bspwm Workspaces;;
-;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;
+;   bspwm workspaces   ;
+;;;;;;;;;;;;;;;;;;;;;;;;
+
 [module/bspwm]
 type = internal/bspwm
+
+; Only show workspaces defined on the same output as the bar
+; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
+; Default: true
 pin-workspaces = true
+
+; Output mode flags after focused state label
+; Default: false
 inline-mode = false
+
+; Create click handler used to focus workspace
+; Default: true
 enable-click = true
+
+; Create scroll handlers used to cycle workspaces
+; Default: true
 enable-scroll = false
+
+; Set the scroll cycle direction 
+; Default: true
 reverse-scroll = false
+
+; Use fuzzy (partial) matching on labels when assigning 
+; icons to workspaces
+; Example: code;♚ will apply the icon to all workspaces 
+; containing 'code' in the label
+; Default: false
 fuzzy-match = true
+
 ; ws-icon-[0-9]+ = label;icon
 ; Note that the label needs to correspond with the bspwm workspace name
-;ws-icon-0 = code;♚
-;ws-icon-1 = office;♛
-;ws-icon-2 = graphics;♜
-;ws-icon-3 = mail;♝
+;ws-icon-0 = 1;♚
+;ws-icon-1 = 2;♛
+;ws-icon-2 = 3;♜
+;ws-icon-3 = 4;♝
 ;ws-icon-4 = web;♞
 ;ws-icon-default = ♟
 
-;ws-icon-0 = 1
-;ws-icon-0 = 2
-;ws-icon-0 = 3
-;ws-icon-0 = 4
-
+; Available tags:
+;   <label-monitor>
+;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
+;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+; Default: <label-state>
 format = <label-state> <label-mode>
+
+; Available tokens:
+;   %name%
+; Default: %name%
 label-monitor = %name%
+
+; If any values for label-dimmed-N are defined, the workspace/mode
+; colors will get overridden with those values if the monitor is out of focus
+; To only override workspaces in a specific state, use:
+;   label-dimmed-focused
+;   label-dimmed-occupied
+;   label-dimmed-urgent
+;   label-dimmed-empty
 label-dimmed-foreground = #555
-label-dimmed-underline = ${bar/top.background}
+label-dimmed-underline = #444
 label-dimmed-focused-background = #f00
-label-focused = %icon% %name%
-label-focused-foreground = ${colors.blue}
-label-focused-underline = ${colors.blue}
-label-occupied = %icon% %name%
-label-occupied-underline = ${colors.purple}
-label-urgent = %icon% %name%
-label-urgent-foreground = ${colors.urgent}
-label-urgent-underline = ${colors.urgent}
-label-empty = %icon% %name%
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-focused = "  %name%  "
+label-focused-foreground = #F0F0F0
+label-focused-background = ${colors.background}
+label-focused-underline = #3B6EA1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-occupied = "  %name%  "
+label-occupied-foreground = #F0F0F0
+label-occupied-underline = #7A7A7A
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-urgent = "  %name%  "
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-underline = #9b0a20
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-empty = "  %name%  "
+label-empty-foreground = #7a7a7a
 
 ; The following labels will be used to indicate the layout/mode
 ; for the focused workspace. Requires <label-mode>
+;
+; Available tokens:
+;   None
 label-monocle = 
 label-tiled = 
 label-fullscreen = 
 label-floating = 
 label-pseudotiled = P
 label-locked = 
-label-locked-foreground = ${colors.yellow}
+label-locked-foreground = #bd2c40
 label-sticky = 
-label-sticky-foreground = ${colors.purple}
+label-sticky-foreground = #fba922
 label-private = 
-label-private-foreground = ${colors.urgent}
+label-private-foreground = #bd2c40
+
+; Separator in between workspaces
+;label-separator = 
+label-separator-padding = 2
+label-separator-foreground = #ffb52a
 
 ;;;;;;;;;;;;;;;;;;;
 ;; Window Switch ;;
@@ -194,6 +229,18 @@ label-padding = 2
 interval      = 10
 exec          = echo ""
 click-left    = jgmenu --config-file=/home/doug/.config/jgmenu/pbarmenurc
+click-right   = exo-open $HOME/.config/jgmenu/jgmenurc
+
+;;;;;;;;;;;;;;;
+;; Jgmenu_Run  ;;
+;;;;;;;;;;;;;;;
+[module/jgrun]
+type          = custom/script
+label         = %output%
+label-padding = 2
+interval      = 10
+exec          = echo ""
+click-left    = jgmenu_run
 click-right   = exo-open $HOME/.config/jgmenu/jgmenurc
 
 ;;;;;;;;;
@@ -456,8 +503,10 @@ label-discharging = BATT: %percentage%%
 ;   %percentage% (default)
 label-full = BATT: %percentage%%
 
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
+;format-charging = <animation-charging> <label-charging>
+format-charging = <label-charging>
+;format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <label-discharging>
 format-full = <label-full>
 
 ramp-capacity-0 = 
@@ -530,11 +579,11 @@ label-padding = 1
 type = internal/date
 
 ; Seconds to sleep between updates
-interval = 5.0
+interval = 15.0
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = %F
+date = %a %e %b
 
 ; Optional time format
 time = %k:%M
@@ -558,3 +607,46 @@ label = "%date% %time%"
 label-font = 0
 label-foreground =  ${colors.foreground}
 label-padding = 1
+
+# toshiba
+[module/CTemp03]
+type = internal/temperature
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 3.0
+
+; Thermal zone to use
+; To list all the zone types, run 
+; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
+; Default: 0
+thermal-zone = 1
+
+; Full path of temperature sysfs path
+; Use `sensors` to find preferred temperature source, then run
+; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
+; to find path to desired file
+; Default reverts to thermal zone setting
+; hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon0/temp2_input
+hwmon-path = /sys/class/hwmon/hwmon1/temp1_input
+
+; Threshold temperature to display warning label
+; Default: 80
+warn-temperature = 75
+
+ramp-0 = ""
+ramp-0-foreground = ${colors.blue}
+ramp-1 = ""
+ramp-1-foreground = ${colors.pink}
+ramp-2 = ""
+ramp-2-foreground = ${colors.purple}
+ramp-3 = ""
+ramp-3-foreground = ${colors.urgent}
+
+format = <label>
+format-padding = 0
+
+format-warn = <label-warn>
+label-warn = " %temperature%"
+label-warn-padding = 1
+label-warn-foreground = ${colors.urgent}
