--- a/.fluxbox/styles/Template/theme.cfg
+++ b/.fluxbox/styles/Template/theme.cfg
@@ -1,8 +1,7 @@
 !
-! fluxbox style - city lights
+! fluxbox style - <Template>
 ! created by PackRat
-! fluxbox port of City Lights GTK/Openbox theme by Matt Dobson: https://forum.archlabslinux.com/t/city-lights-flat-gtk-theme/734
-! creation date - 05-01-2018
+! creation date - 05-27-2018
 !
 ! This program is free software: you can redistribute it and/or modify
 ! it under the terms of the GNU General Public License as published by
@@ -14,243 +13,242 @@
 ! MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
-! FONT OPTIONS
-*.font:							  Sunflower Light-11:Regular
-!toolbar.workspace.font:           IBM Plex Mono-10:Regular
-!toolbar.clock.font:               IBM Plex Mono-10:Regular
-!toolbar.iconbar.focused.font:    Source Serif Pro-11:semibold
-!toolbar.iconbar.unfocused.font:  Source Serif Pro-11:regular
-!window.font:                     <font>
-!window.label.focus.font:          IBM Plex Sans-10:Medium
-!window.label.unfocus.font:       Source Serif Pro-11:regular
-!menu.frame.font:                 <font>
-!menu.hilite.font:                Source Serif Pro-11:regular
-!menu.title.font:                 <font>
+!FONT OPTIONS
+*.font:                         Oxygen-10:regular
+!toolbar.workspace.font:         Sans-11:Regular
+!toolbar.clock.font:             Sans-11:Regular
+!window.font:                    Sans-11:Regular
+!menu.frame.font:                Sans-11:Regular
+!menu.hilite.font:               Oxygen-11:Bold
+!menu.title.font:                Sans-11:Regular
+!toolbar.iconbar.focused.font:   Sans-11:Regular
+!toolbar.iconbar.unfocused.font: Sans-11:Regular
+
+menu.title.effect: shadow
+menu.title.shadow.color: red
 
 !TOOLBAR OPTIONS
-toolbar: 						flat gradient vertical
+
+toolbar:                        flat gradient vertical
 toolbar.height:                 24
-toolbar.bevelWidth:             3
-toolbar.color:                  #cfcfcf
-toolbar.colorTo:                #cfcfcf
-toolbar.borderColor:            #cfcfcf
-toolbar.borderWidth:            0
 toolbar.shaped:                 false
+toolbar.bevelWidth:             1
+toolbar.borderColor:            #2E2E2E
+toolbar.borderWidth:            1
+toolbar.color:                  #DEDEDE
+toolbar.colorTo:                #DEDEDE
 
 toolbar.clock:                  flat gradient vertical
-toolbar.clock.borderColor:      #050505
-toolbar.clock.borderWidth:      0
 toolbar.clock.justify:          Center
-toolbar.clock.color:            #cfcfcf
-toolbar.clock.colorTo:          #cfcfcf
-toolbar.clock.textColor:        #050505
-
-toolbar.systray:		parentrelative
-!toolbar.systray.color:		#0D1114
-!toolbar.systray.colorTo:	#0D1114
+toolbar.clock.borderColor:      #2E2E2E
+toolbar.clock.borderWidth:      0
+toolbar.clock.color:            #DEDEDE
+toolbar.clock.colorTo:          #DEDEDE
+toolbar.clock.textColor:        #191919
 
 toolbar.workspace:              flat gradient vertical
-toolbar.workspace.color:        #cfcfcf
-toolbar.workspace.colorTo:      #cfcfcf
 toolbar.workspace.justify:      Center
-toolbar.workspace.textColor:    #050505
-toolbar.workspace.borderColor:  #050505
+toolbar.workspace.borderColor:  #2E2E2E
 toolbar.workspace.borderWidth:  0
+toolbar.workspace.color:        #DEDEDE
+toolbar.workspace.colorTo:      #DEDEDE
+toolbar.workspace.textColor:    #191919
 
-toolbar.button:			parentrelative
-toolbar.button.PicColor:	 #7e7e7e
-toolbar.button.scale:		0.5
+toolbar.systray:    parentrelative
+toolbar.button:     parentrelative
+toolbar.button.PicColor:   #4E4E4E
+toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.empty.color:    #cfcfcf
-toolbar.iconbar.empty.colorTo:  #cfcfcf
-toolbar.iconbar.borderColor:    #7e7e7e
+toolbar.iconbar.borderColor:    #AAAAAA
 toolbar.iconbar.borderWidth:    1
+toolbar.iconbar.empty.color:    #DEDEDE
+toolbar.iconbar.empty.colorTo:  #DEDEDE
 
-toolbar.iconbar.focused:        flat gradient vertical
-toolbar.iconbar.focused.color:			#BABAAF
-toolbar.iconbar.focused.colorTo:		#BABAAF
-toolbar.iconbar.focused.borderColor:	#7e7e7e
-toolbar.iconbar.focused.borderWidth:    1
-toolbar.iconbar.focused.justify:        Center
-toolbar.iconbar.focused.textColor:	    #050505
+toolbar.iconbar.focused:              flat gradient vertical
+toolbar.iconbar.focused.justify:      Center
+toolbar.iconbar.focused.borderColor:  #AAAAAA
+toolbar.iconbar.focused.borderWidth:  1
+toolbar.iconbar.focused.color:        #CCCCDE
+toolbar.iconbar.focused.colorTo:      #CCCCDE
+toolbar.iconbar.focused.textColor:    #191919
 
-toolbar.iconbar.unfocused:        flat gradient vertical
-toolbar.iconbar.unfocused.color:       #cfcfcf
-toolbar.iconbar.unfocused.colorTo:     #cfcfcf
-toolbar.iconbar.unfocused.borderColor: #7e7e7e
-toolbar.iconbar.unfocused.borderWidth:  1
+toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.textColor:  #050505
+toolbar.iconbar.unfocused.borderColor:  #AAAAAA
+toolbar.iconbar.unfocused.borderWidth:  1
+toolbar.iconbar.unfocused.color:        #DEDEDE
+toolbar.iconbar.unfocused.colorTo:      #DEDEDE
+toolbar.iconbar.unfocused.textColor:    #191919
 
 !WINDOW OPTIONS
+
 window.title.height:            20
 window.justify:                 Center
-window.bevelWidth:              0
-window.borderColor:             #191919
+window.bevelWidth:              1
+window.borderColor:             #2E2E2E
 window.borderWidth:             1
+
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
-!window.frame.focusColor:        <color>
-!window.frame.unfocusColor:      <color>
+!window.frame.focusColor:        parentrelative
+!window.frame.unfocusColor:      pafrentrelative
+!window.label.active:            <texture type>
+!window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #cfcfcf
-window.title.focus.colorTo:     #cfcfcf
+window.title.focus.color:       #A62848
+window.title.focus.colorTo:     #A62848
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #cfcfcf
-window.title.unfocus.colorTo:   #cfcfcf
-
-!window.label.active:            flat gradient vertical gradient horizontal
-!window.label.active.textColor:  #E5E5E5
+window.title.unfocus.color:     #DEDEDE
+window.title.unfocus.colorTo:   #DEDEDE
 
 window.label.focus:             flat gradient vertical
-window.label.focus.color:       #242420
-window.label.focus.colorTo:     #242420
-window.label.focus.textColor:   #F5F5EF
+window.label.focus.color:       #A62848
+window.label.focus.colorTo:     #A62848
+window.label.focus.textColor:   #FFFFFF
 
 window.label.unfocus:           flat gradient vertical
-window.label.unfocus.color:     #CFCFCF
-window.label.unfocus.colorTo:   #CFCFCF
-window.label.unfocus.textColor: #7E7E7E
+window.label.unfocus.color:     #DEDEDE
+window.label.unfocus.colorTo:   #DEDEDE
+window.label.unfocus.textColor: #191919
 
 window.button.focus:            flat gradient vertical
-window.button.focus.color:      #242420
-window.button.focus.colorTo:    #242420
-window.button.focus.picColor:   #CFCFCF
-window.button.pressed:			sunken gradient vertical bevel1
-window.button.pressed.color:    #30302B
-window.button.pressed.colorTo:  #30302B
+window.button.focus.color:      #A62848
+window.button.focus.colorTo:    #A62848
+window.button.focus.picColor:   #FFFFFF
+
+window.button.pressed:          sunken
+window.button.pressed.color:    #D47E94
+window.button.pressed.colorTo:  #D47E94
+
 window.button.unfocus:          flat gradient vertical
-window.button.unfocus.color:    #CFCFCF
-window.button.unfocus.colorTo:  #CFCFCF
-window.button.unfocus.picColor: #CFCFCF
+window.button.unfocus.color:    #DEDEDE
+window.button.unfocus.colorTo:  #DEDEDE
+window.button.unfocus.picColor: #191919
 
 window.grip.focus:              flat
-window.grip.focus.color:        #BABAAF
-window.grip.focus.colorTo:      #BABAAF
-window.grip.unfocus:            flat
-window.grip.unfocus.color:      #cfcfcf
-window.grip.unfocus.colorTo:    #cfcfcf
+window.grip.focus.color:        #666666
+window.grip.focus.colorTo:      #666666
 
-window.handle.focus:            flat gradient vertical
-window.handle.focus.color:      #cfcfcf
-window.handle.focus.colorTo:    #cfcfcf
-window.handle.unfocus:          flat gradient vertical
-window.handle.unfocus.color:    #cfcfcf
-window.handle.unfocus.colorTo:  #cfcfcf
+window.grip.unfocus:            flat
+window.grip.unfocus.color:      #DEDEDE
+window.grip.unfocus.colorTo:    #DEDEDE
+
+window.handle.focus:            flat
+window.handle.focus.color:      #DEDEDE
+window.handle.focus.colorTo:    #DEDEDE
+
+window.handle.unfocus:          flat
+window.handle.unfocus.color:    #DEDEDE
+window.handle.unfocus.colorTo:  #DEDEDE
+
 window.handleWidth:             3
 
-!!MENU OPTIONS
-!menu.roundCorners:              <{Top|Bottom}{Left|Right}>
-menu.itemHeight:                20
-menu.bevelWidth:                0
-menu.borderColor:               #cfcfcf
-menu.borderWidth:               4
-!menu.bullet:                    <{empty|square|triangle|diamond}>
-menu.bullet:					triangle
-menu.bullet.position:           right
-menu.frame:                     flat gradient diagonal
-menu.frame.color:               #cfcfcf
-menu.frame.colorTo:             #cfcfcf
-menu.frame.disableColor:        #B5B9BF
-menu.frame.justify:             Left
-menu.frame.textColor:           #050505
-menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #BABAAF
-menu.hilite.colorTo:            #BABAAF
-menu.hilite.justify:            Left
-menu.hilite.textColor:          #050505
+!MENU OPTIONS
 
-menu.title:                     flat gradient vertical
-menu.title.color:               #BABAAF
-menu.title.colorTo:             #BABAAF
-menu.title.textColor:           #050505
+menu.itemHeight:                18
+menu.bevelWidth:                1
+menu.borderColor:               #2E2E2E
+menu.borderWidth:               1
+menu.frame.justify:             Left
+!menu.bullet:                    <{empty|square|triangle|diamond}>
+menu.bullet:                    triangle
+menu.bullet.position:           Right
+menu.frame:                     flat
+menu.frame.color:               #DEDEDE
+menu.frame.colorTo:             #DEDEDE
+menu.frame.disableColor:        #545454
+
+menu.frame.textColor:           #191919
+menu.hilite:                    flat
+menu.hilite.color:              #D5D7E3
+menu.hilite.colorTo:            #D5D7E3
+menu.hilite.justify:            left
+menu.hilite.textColor:          #191919
+
+menu.title:                     flat
+menu.title.color:               #D5D7E3
+menu.title.colorTo:             #D5D7E3
+menu.title.textColor:           #191919
 menu.title.justify:             Center
 menu.titleHeight:               20
+!menu.roundCorners:              <{Top|Bottom}{Left|Right}>
 
-!! PIXMAPS
+!SLIT
+slit:             flat
+slit.bevelWidth:  0
+slit.borderColor: #000000
+slit.borderWidth: 0
+slit.color:       #000000
+slit.colorTo:     #000000
+
+!BACKGROUND
+
+!background: centered|aspect|tiled|fullscreen|random|solid|gradient <texture>|mod|none|unset
+!background.pixmap: <file or directory>
+!background.color: <color>
+!background.colorTo: <color>
+!background.modX: <integer>
+!background.modY: <integer>
+
+! PIXMAP OPTIONS
 
 !toolbar.pixmap:                 <filename>
-!toolbar.clock.pixmap:           <filename>
 !toolbar.workspace.pixmap:       <filename>
-!toolbar.iconbar.empty.pixmap:   <filename>
-!toolbar.iconbar.focused.pixmap: 	yellow-black.png
+!toolbar.clock.pixmap:           <filename>
+!toolbar.iconbar.focused.pixmap: <filename>
 !toolbar.iconbar.unfocused.pixmap: <filename>
+!toolbar.iconbar.empty.pixmap:   <filename>
 
 !window.title.focus.pixmap:      <filename>
 !window.title.unfocus.pixmap:    <filename>
-!window.label.focus.pixmap:      title.png
-!window.label.unfocus.pixmap:    title.png
+
+!window.label.focus.pixmap:      <filename>
+!window.label.unfocus.pixmap:    <filename>
+
+!window.button.focus.pixmap:     <filename>
+!window.button.pressed.pixmap:   <filename>
+!window.button.unfocus.pixmap:   <filename>
 
 !window.grip.focus.pixmap:       <filename>
 !window.grip.unfocus.pixmap:     <filename>
 !window.handle.focus.pixmap:     <filename>
 !window.handle.unfocus.pixmap:   <filename>
 
-!window.button.focus.pixmap:     <filename>
-!window.button.unfocus.pixmap:   titlebar.png
-!window.button.pressed.pixmap:   <filename>
-
-!window.close.pixmap:            closefcs.png
-!window.close.pressed.pixmap:    closeprs.png
+!window.close.pixmap:            <filename>
+!window.close.pressed.pixmap:    <filename>
 !window.close.unfocus.pixmap:    <filename>
 
-!window.maximize.pixmap:         maxfcs.png
+!window.maximize.pixmap:         <filename>
 !window.maximize.pressed.pixmap: <filename>
 !window.maximize.unfocus.pixmap: <filename>
 
-!window.iconify.pixmap:          minfcs.png
-!window.iconify.pressed.pixmap: maximize-pressed.xpm
-!window.iconify.unfocus.pixmap: <filename>
+!window.iconify.pixmap:          <filename>
+!window.iconify.pressed.pixmap:  <filename>
+!window.iconify.unfocus.pixmap:  <filename>
 
-!window.shade.pixmap:            maximize-prelight.xpm
+!window.shade.pixmap:            <filename>
 !window.shade.pressed.pixmap:    <filename>
 !window.shade.unfocus.pixmap:    <filename>
-
-!window.stick.pixmap:            maximize-prelight.xpm
+!window.stick.pixmap:            <filename>
 !window.stick.pressed.pixmap:    <filename>
 !window.stick.unfocus.pixmap:    <filename>
-
 !window.stuck.pixmap:            <filename>
 !window.stuck.unfocus.pixmap:    <filename>
-
 !window.lhalf.pixmap:            <filename>
 !window.lhalf.unfocus.pixmap:    <filename>
 !window.rhalf.pixmap:            <filename>
 !window.rhalf.unfocus.pixmap:    <filename>
 
 !menu.frame.pixmap:              <filename>
-!menu.hilight.pixmap             <filename>
+!menu.hilite.pixmap:             <filename>
 !menu.title.pixmap:              <filename>
-
-! pixmaps for menu bullets
-!menu.selected.pixmap:           redtest.png
-!menu.submenu.pixmap:            redtest.png
+!menu.selected.pixmap:           <filename>
+!menu.submenu.pixmap:            <filename>
 !menu.unselected.pixmap:         <filename>
 
+!slit.pixmap:                    <filename>
 
-
-! usually do not change background and slit
-
-!BACKGROUND
-! Every style must specify the background option. If you don’t want your
-! style to change the user’s background, then use ‘background: none’. 
-! background: centered|aspect|tiled|fullscreen|random|solid|gradient <texture>|mod|none|unset
-! background.pixmap: <file or directory>
-! background.color: <color>
-! background.colorTo: <color>
-! background.modX: <integer>
-! background.modY: <integer>
-! background:	none
-
-!SLIT
-slit:			flat
-slit.bevelWidth:	0
-slit.borderColor:	#101010
-slit.borderWidth:	0
-slit.color:         #101010
-slit.colorTo:       #101010
-!slit.pixmap:		<filename>
-           
-! EOF
+!
+!fluxbox-style.txt              08 February 2015               FLUXBOX-STYLE(5)
