--- a/.fluxbox/styles/mustang/theme.cfg
+++ b/.fluxbox/styles/mustang/theme.cfg
@@ -7,9 +7,9 @@
 ! Attribution-NonCommercial-ShareAlike License.
 
 ! FONT OPTIONS
-*.font:							 Inconsolata LGC-10:Regular
-!toolbar.workspace.font:         Code New Roman-11:regular
-!toolbar.clock.font:             Code New Roman-11:regular
+*.font:							 Roboto-11:Regular
+toolbar.workspace.font:          Roboto Mono-11:regular
+toolbar.clock.font:              Roboto Mono-11:regular
 !toolbar.iconbar.focused.font:    Lato-10:Regular
 !toolbar.iconbar.unfocused.font: Sans-9:Regular
 !window.font:                    <font>
